--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
+    "@angular/animations": "14.0.5",
+    "@angular/common": "14.0.5",
+    "@angular/compiler": "14.0.5",
+    "@angular/core": "14.0.5",
+    "@angular/forms": "14.0.5",
+    "@angular/platform-browser": "14.0.5",
+    "@angular/platform-browser-dynamic": "14.0.5",
+    "@angular/router": "14.0.5",
     "@gouvfr/dsfr": "1.6.0",
-    "core-js": "3.8.3",
-    "rxjs": "6.6.3",
-    "tslib": "2.1.0",
-    "zone.js": "0.11.3"
+    "jasmine-core": "4.2.0",
+    "rxjs": "7.5.5",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.0",
